# VIRS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsOld.txt  README.md  SOLUTION_TO_MEMORY_ISSUE.txt  TODO.md  config.json  context.md  path.xml  path2.xml  path3.xml
assets/: impulse_response.wav.asd  impulse_response2.wav.asd  room.blend  room.blend1  room5.mtl  room_with_source.blend  room_with_source.blend1  room_with_source.mtl  room_with_source2.blend  room_with_source2.mtl
src/: main.cpp
src/gui/: editor.cpp  editor.h  gui.cpp  gui.h  viewer.cpp  viewer.h
src/simulator/: 1D_simulation.cpp  1D_simulation.h  biquad.cpp  biquad.h  init_sphere.cu  normals.h  simulator.cpp  simulator.h  simulator_cpu.cpp  simulator_cpu.h  simulator_dispatch.cpp  simulator_dispatch.h  simulator_gpu.cpp  simulator_gpu.cu  simulator_gpu.h  sponge_kernel.cu  vectorspace.cpp  vectorspace.h
src/util/: convolution.cpp  convolution.h  downsampling_filter_fir.cpp  downsampling_filter_fir.h  downsampling_filter_iir.cpp  downsampling_filter_iir.h  image.cpp  image.h  logger.h
src/web/: websocket_server.h
